--- a/index.html
+++ b/index.html
@@ -1,148 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CustomZone</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #1e90ff; /* fundal albastru */
+      font-family: 'Arial', sans-serif;
+      background: url('https://i.imgur.com/vTx8TQO.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: white;
-      overflow-x: hidden;
+      text-align: center;
     }
 
-    /* Titlu principal */
-    .title {
+    h1 {
       font-size: 4em;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 50px;
-      transform: skew(-10deg);
+      margin-top: 40px;
+    }
+
+    .custom {
+      color: red;
+    }
+
+    .zone {
+      color: white;
+    }
+
+    .container {
       display: flex;
       justify-content: center;
-      gap: 10px;
+      margin-top: 80px;
+      gap: 40px;
     }
 
-    .title span {
-      display: inline-block;
-      animation: rainbow 3s infinite;
-    }
-
-    /* Fiecare literă are delay diferit */
-    .title span:nth-child(1) { animation-delay: 0s; }
-    .title span:nth-child(2) { animation-delay: 0.2s; }
-    .title span:nth-child(3) { animation-delay: 0.4s; }
-    .title span:nth-child(4) { animation-delay: 0.6s; }
-    .title span:nth-child(5) { animation-delay: 0.8s; }
-    .title span:nth-child(6) { animation-delay: 1s; }
-    .title span:nth-child(7) { animation-delay: 1.2s; }
-    .title span:nth-child(8) { animation-delay: 1.4s; }
-    .title span:nth-child(9) { animation-delay: 1.6s; }
-    .title span:nth-child(10) { animation-delay: 1.8s; }
-
-    @keyframes rainbow {
-      0% { color: red; }
-      20% { color: orange; }
-      40% { color: yellow; }
-      60% { color: green; }
-      80% { color: blue; }
-      100% { color: violet; }
-    }
-
-    /* Secțiune jos */
-    .footer {
-      background-color: black;
-      color: #1e90ff;
-      text-align: center;
-      padding: 30px 10px;
-      margin-top: 200px;
-    }
-
-    /* Hamburger menu */
-    .menu-btn {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      width: 30px;
-      height: 25px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
-      z-index: 1000;
-    }
-
-    .menu-btn div {
-      height: 4px;
-      background: white;
-      border-radius: 2px;
-    }
-
-    .menu {
-      position: fixed;
-      top: 0;
-      left: -200px;
+    .card {
       width: 200px;
-      height: 100%;
-      background: black;
-      color: white;
+      height: 200px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border: 2px solid orange;
+      border-radius: 15px;
       display: flex;
       flex-direction: column;
-      padding: 60px 20px;
-      transition: left 0.3s ease;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: 0.3s;
     }
 
-    .menu a {
-      color: #1e90ff;
+    .card:hover {
+      transform: scale(1.05);
+      background-color: rgba(255, 69, 0, 0.6);
+    }
+
+    .card img {
+      width: 60px;
+      margin-bottom: 10px;
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      padding: 20px;
+      background: linear-gradient(90deg, black, orange, red, purple, black);
+      color: white;
+      font-weight: bold;
+    }
+
+    .footer a {
+      color: #00ffff;
       text-decoration: none;
-      margin: 10px 0;
-      font-size: 1.2em;
     }
 
-    .menu.show {
-      left: 0;
+    .footer a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <!-- Buton meniu -->
-  <div class="menu-btn" onclick="toggleMenu()">
-    <div></div>
-    <div></div>
-    <div></div>
+
+  <h1><span class="custom">Custom</span><span class="zone">Zone</span></h1>
+
+  <div class="container">
+    <div class="card" onclick="location.href='money.html'">
+      <img src="https://cdn-icons-png.flaticon.com/512/3208/3208722.png" alt="Money icon" />
+      <strong>Money</strong>
+    </div>
+
+    <div class="card" onclick="location.href='ranks.html'">
+      <img src="https://cdn-icons-png.flaticon.com/512/1998/1998611.png" alt="Ranks icon" />
+      <strong>Ranks</strong>
+    </div>
+
+    <div class="card" onclick="location.href='rules.html'">
+      <img src="https://cdn-icons-png.flaticon.com/512/1048/1048947.png" alt="Rules icon" />
+      <strong>Rules!</strong>
+    </div>
   </div>
 
-  <!-- Meniu lateral -->
-  <div class="menu" id="menu">
-    <a href="https://discord.gg/emajm8bgRN" target="_blank">Discord</a>
-  </div>
-
-  <!-- Titlu principal -->
-  <div class="title">
-    <span>C</span>
-    <span>u</span>
-    <span>s</span>
-    <span>t</span>
-    <span>o</span>
-    <span>m</span>
-    <span>Z</span>
-    <span>o</span>
-    <span>n</span>
-    <span>e</span>
-  </div>
-
-  <!-- Footer -->
   <div class="footer">
-    <h2>Page by Sn1p</h2>
-    <p>Just a simple server!</p>
+    Just a simple server!<br/>
+    made by: <a href="team.html">@CZTeam</a>
   </div>
-
-  <script>
-    function toggleMenu() {
-      document.getElementById("menu").classList.toggle("show");
-    }
-  </script>
 </body>
 </html>
