--- a/money.html
+++ b/money.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <title>Money - CustomZone</title>
-  <style>
-    body {
-      background-color: #111;
-      color: orange;
-      font-family: 'Arial', sans-serif;
-      background-image: url('https://i.imgur.com/MN0ltpt.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      padding: 40px;
-    }
-    h1 {
-      text-align: center;
-      color: #ffb347;
-      font-size: 3em;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-      max-width: 500px;
-      margin: 0 auto;
-      font-size: 1.5em;
-    }
-    li {
-      margin-bottom: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 15px;
-      border-left: 5px solid orange;
-      border-radius: 10px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Money</title>
+<style>
+body { background-color:#111; color:#fff; font-family:sans-serif; text-align:center; }
+h1 { margin-top:50px; color:orange; }
+ul { list-style:none; font-size:24px; }
+a { color:yellow; text-decoration:none; }
+</style>
 </head>
 <body>
-  <h1>🏦 Lista de bani:</h1>
-  <ul>
+<h1>Money</h1>
+<ul>
     <li>1. Trăit - 100k MC</li>
     <li>2. Mmm - 55k</li>
     <li>3. Test - 33k</li>
-  </ul>
+</ul>
+<a href="index.html">Back</a>
 </body>
 </html>
