--- a/ranks.html
+++ b/ranks.html
@@ -1,58 +1,32 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <title>Ranks - CustomZone</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: 'Courier New', Courier, monospace;
-      padding: 30px;
-      background-image: url('https://i.imgur.com/znN9FJf.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-    }
-    h1 {
-      text-align: center;
-      color: orange;
-      font-size: 3em;
-    }
-    ul {
-      max-width: 600px;
-      margin: auto;
-      font-size: 1.2em;
-      line-height: 1.8em;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 15px;
-    }
-    li {
-      margin-bottom: 10px;
-    }
-    strong {
-      color: #ff5500;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Ranks</title>
+<style>
+body { background-color:#222; color:#fff; font-family:sans-serif; text-align:center; }
+h1 { margin-top:50px; color:orange; }
+ul { list-style:none; font-size:20px; }
+a { color:yellow; text-decoration:none; }
+</style>
 </head>
 <body>
-  <h1>🎖️ CustomZone Ranks!</h1>
-  <ul>
-    <li><strong>Fly permissions:</strong> /fly, /seen</li>
-    <li><strong>VIP:</strong> /kit vip</li>
-    <li>Meteorolog</li>
-    <li>Creative</li>
-    <li>AntiGriefer</li>
-    <li>Admin</li>
-    <li>Operator</li>
-    <li>Deputy</li>
-    <li>Helper</li>
-    <li>Elite</li>
-    <li>AntiGriefer+: sc</li>
-    <li>COR-Status: wt</li>
-    <li><strong>(Exclusive ranks)</strong></li>
-    <li>Celestial: /freez</li>
-  </ul>
+<h1>CustomZone Ranks!</h1>
+<ul>
+<li>Fly permissions: /fly, /seen</li>
+<li>VIP: /kit vip</li>
+<li>Meteorolog</li>
+<li>Creative</li>
+<li>AntiGriefer</li>
+<li>Admin</li>
+<li>Operator</li>
+<li>Deputy</li>
+<li>Helper</li>
+<li>Elite</li>
+<li>AntiGriefer+: sc</li>
+<li>COR-Status: wt (Exclusive ranks)</li>
+<li>Celestial: /freez</li>
+</ul>
+<a href="index.html">Back</a>
 </body>
 </html>
