--- a/team.html
+++ b/team.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <title>CZTeam - CustomZone</title>
-  <style>
-    body {
-      background: #1a1a1a url('https://i.imgur.com/6mlr0QK.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #ffa500;
-      font-family: 'Arial', sans-serif;
-      padding: 30px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      color: #ffcc00;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-      font-size: 1.4em;
-    }
-    li {
-      margin-bottom: 10px;
-      background: rgba(0,0,0,0.5);
-      padding: 10px;
-      border-radius: 10px;
-      display: inline-block;
-    }
-  </style>
-</head>
+<meta charset="UTF-8">
+<title>CZTeam</title>
+<style>
+body { background-color:#222; color:#fff; font-family:sans-serif; text-align:center; }
+h1 { margin-top:50px; color:orange; }
+ul { list-style:none; font-size:20px; }
+a { color:yellow; text-decoration:none; }
+</style>
 <body>
-  <h1>🧠 These are the ones who make this server better:</h1>
-  <ul>
-    <li>Sn1p</li>
-    <li>BappyGamingOP</li>
-    <li>rolol1234</li>
-    <li>VolodyaXXL</li>
-  </ul>
+<h1>These are the ones who make this server better:</h1>
+<ul>
+<li>Sn1p</li>
+<li>BappyGamingOP</li>
+<li>rolol1234</li>
+<li>VolodyaXXL</li>
+</ul>
+<a href="index.html">Back</a>
 </body>
 </html>
