--- a/rules.html
+++ b/rules.html
@@ -1,47 +1,24 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <title>Rules - CustomZone</title>
-  <style>
-    body {
-      background-color: #0e0e0e;
-      background-image: url('https://i.imgur.com/M3RcloK.jpg');
-      background-size: cover;
-      background-attachment: fixed;
-      color: white;
-      font-family: Tahoma, sans-serif;
-      padding: 40px;
-      text-shadow: 1px 1px 2px black;
-    }
-    h1 {
-      text-align: center;
-      color: orange;
-      font-size: 3em;
-    }
-    ul {
-      max-width: 700px;
-      margin: auto;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 30px;
-      border-radius: 10px;
-      font-size: 1.3em;
-    }
-    li {
-      margin-bottom: 15px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Rules</title>
+<style>
+body { background-color:#111; color:#fff; font-family:sans-serif; text-align:center; }
+h1 { margin-top:50px; color:orange; }
+ul { list-style:none; font-size:20px; }
+a { color:yellow; text-decoration:none; }
+</style>
 </head>
 <body>
-  <h1>📜 Regulile serverului</h1>
-  <ul>
-    <li>Fără hackuri, X-ray sau autoclickere.</li>
-    <li>Respectă jucătorii și staff-ul.</li>
-    <li>Nu distruge construcțiile altora (griefing = ban).</li>
-    <li>Nu abuza de bug-uri sau comenzi.</li>
-    <li>Nu face spam sau flood în chat.</li>
-    <li>Fii activ și ajută comunitatea!</li>
-    <li>Orice încercare de scam se pedepsește.</li>
-  </ul>
+<h1>Rules!</h1>
+<ul>
+<li>No griefing other players</li>
+<li>No cheating / hacking</li>
+<li>Be respectful</li>
+<li>Do not spam chat</li>
+<li>Follow staff instructions</li>
+</ul>
+<a href="index.html">Back</a>
 </body>
 </html>
