--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
         margin: 0;
         padding: 0;
-        background: url('https://i.imgur.com/0C0kFZb.png') no-repeat center center fixed;
+        background: url('https://share.google/images/79qnu2xcjKuB0xD1X') no-repeat center center fixed;
         background-size: cover;
         font-family: 'Press Start 2P', cursive;
         overflow-x: hidden;
@@ -20,6 +20,7 @@
         text-align: center;
         margin-top: 50px;
         font-size: 60px;
+        text-shadow: 2px 2px 10px black;
     }
 
     .custom { color: red; }
@@ -47,6 +48,7 @@
         text-decoration: none;
         color: white;
         font-size: 20px;
+        box-shadow: 0px 0px 15px rgba(255,140,0,0.8);
     }
 
     .icon:hover {
@@ -62,23 +64,26 @@
         text-align: center;
         padding: 15px;
         font-size: 16px;
+        text-shadow: 1px 1px 5px black;
     }
 
-    .falling-leaf {
+    /* Frunze portocalii de stejar */
+    .leaf {
         position: absolute;
-        width: 30px;
-        height: 30px;
-        background: url('https://i.imgur.com/0m9RhvN.png') no-repeat center center;
+        width: 40px;
+        height: 40px;
+        background-image: url('https://i.imgur.com/pJWhYwQ.png'); /* frunză portocalie de stejar */
         background-size: contain;
+        background-repeat: no-repeat;
         top: -50px;
-        animation: fall 10s linear infinite;
+        pointer-events: none;
+        animation: fall linear infinite;
     }
 
     @keyframes fall {
         0% { transform: translateY(0px) rotate(0deg); opacity:1; }
-        100% { transform: translateY(800px) rotate(360deg); opacity:0; }
+        100% { transform: translateY(110vh) rotate(360deg); opacity:0; }
     }
-
 </style>
 </head>
 <body>
@@ -104,16 +109,24 @@
         made by: <a href="creators.html" style="color:yellow;text-decoration:underline;">@CZTeam</a>
     </div>
 
-    <!-- Frunze animate -->
+    <!-- Script pentru frunze -->
     <script>
-        for (let i=0; i<30; i++) {
-            let leaf = document.createElement('div');
-            leaf.className = 'falling-leaf';
+        function createLeaf() {
+            const leaf = document.createElement('div');
+            leaf.className = 'leaf';
             leaf.style.left = Math.random() * window.innerWidth + 'px';
-            leaf.style.animationDuration = (5 + Math.random()*10) + 's';
-            leaf.style.animationDelay = Math.random()*5 + 's';
+            leaf.style.animationDuration = (6 + Math.random() * 6) + 's';
+            leaf.style.opacity = Math.random();
             document.body.appendChild(leaf);
+
+            // elimină frunza după ce cade
+            setTimeout(() => {
+                leaf.remove();
+            }, 12000);
         }
+
+        // generează frunze la fiecare 500ms
+        setInterval(createLeaf, 500);
     </script>
 </body>
 </html>
